# netbarrier

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
api/: api_test.go  handlers.go  server.go
bpf/: connect_count.c  ssh_block.c  ssh_monitor.c  udp_monitor.c
cmd/: agent.go  connections.go  root.go  ssh.go  ssh_fail.go  ssh_session.go  udpCmd.go
cmd/netbarrier/: config.go  main.go
config/: config.go  rules.json
configs/: default.yaml
core/: agent.go  common.go  connect.go  iputils.go  runtime.go  ssh.go  ssh_fail_monitor.go  ssh_session_agent.go  udp.go
docs/: README.md  architecture.md
ebpf-programs/ssh_fail_monitor/: Cargo.toml
ebpf-programs/ssh_monitor/: Cargo.toml
ebpf-programs/ssh_monitor/program/: Cargo.toml
ebpf-programs/ssh_monitor/program/src/: lib.rs
ebpf-programs/ssh_monitor/src/: lib.rs
ebpf-programs/ssh_monitor/xtask/src/: main.rs
ebpf-programs/ssh_session_monitor/: Cargo.toml  Makefile  ssh_session_monitor.c
ebpf-programs/test_program/: Cargo.toml
ebpf-programs/udp_monitor/: rust-toolchain.toml
internal/capture/: capture.go  capture_test.go
internal/dpi/: dpi.go  dpi_test.go
internal/ebpf/: ebpf.go  ebpf_test.go
internal/filter/: filter_test.go  rules.go  state.go
internal/limiter/: limiter.go  limiter_test.go
internal/logging/: logger.go  logger_test.go
pkg/metrics/: metrics.go  metrics_test.go
scripts/: build.sh  build_ebpf.sh  install.sh  sendto_test  sendto_test.c  test_ssh.sh  test_ssh_fail.sh  test_udp.sh
test/: firewall_test.go  sample_packet.pcap
xtask/: Cargo.toml
(+21 files in other folders)
