[package]
name = "ssh_monitor_ebpf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "ssh_monitor_ebpf"

[dependencies]
aya-ebpf = { version = "0.1.1", default-features = false }

[profile.release]
opt-level = "z"   
lto = true
panic = "abort"
codegen-units = 1
strip = "debuginfo"